--- a/WpfRestaurant/LobbyOrderPage.xaml
+++ b/WpfRestaurant/LobbyOrderPage.xaml
@@ -83,65 +83,31 @@
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
-           
-            <WrapPanel>
-                <StackPanel Width="190" Height="90" Margin="10">
-                    <StackPanel.Background>
-                        <ImageBrush ImageSource="pic/yellow_button.png"/>
-                    </StackPanel.Background>
-                    <StackPanel Orientation="Horizontal">
-                        <StackPanel Width="80" Height="90" Orientation="Horizontal">
-                            <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White" Text="A009"/>
+            <ItemsControl x:Name="OrderTableList">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel></WrapPanel>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Width="190" Height="90" Margin="10">
+                            <StackPanel.Background>
+                                <ImageBrush ImageSource="pic/yellow_button.png"/>
+                            </StackPanel.Background>
+                            <StackPanel Orientation="Horizontal">
+                                <StackPanel Width="80" Height="90" Orientation="Horizontal">
+                                    <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White" Text="{Binding No}"/>
+                                </StackPanel>
+                                <StackPanel Width="110"  VerticalAlignment="Center" Height="90">
+                                    <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="#FFFFCC00" VerticalAlignment="Center" Margin="0,20,0,0">预约</TextBlock>
+                                    <TextBlock Foreground="#FFFFCC00" FontSize="20" TextAlignment="Center">11:22</TextBlock>
+                                </StackPanel>
+                            </StackPanel>
                         </StackPanel>
-                        <StackPanel Width="110"  VerticalAlignment="Center" Height="90">
-                            <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="#FFFFCC00" VerticalAlignment="Center" Margin="0,20,0,0">预约</TextBlock>
-                            <TextBlock Foreground="#FFFFCC00" FontSize="20" TextAlignment="Center">11:22</TextBlock>
-                        </StackPanel>
-                    </StackPanel>
-                </StackPanel>
-                <StackPanel Width="190" Height="90" Margin="10">
-                    <StackPanel.Background>
-                        <ImageBrush ImageSource="pic/yellow_button.png"/>
-                    </StackPanel.Background>
-                    <StackPanel Orientation="Horizontal">
-                        <StackPanel Width="80" Height="90" Orientation="Horizontal">
-                            <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White" Text="A009"/>
-                        </StackPanel>
-                        <StackPanel Width="110"  VerticalAlignment="Center" Height="90">
-                            <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="#FFFFCC00" VerticalAlignment="Center" Margin="0,20,0,0">预约</TextBlock>
-                            <TextBlock Foreground="#FFFFCC00" FontSize="20" TextAlignment="Center">11:22</TextBlock>
-                        </StackPanel>
-                    </StackPanel>
-                </StackPanel>
-                <StackPanel Width="190" Height="90" Margin="10">
-                    <StackPanel.Background>
-                        <ImageBrush ImageSource="pic/yellow_button.png"/>
-                    </StackPanel.Background>
-                    <StackPanel Orientation="Horizontal">
-                        <StackPanel Width="80" Height="90" Orientation="Horizontal">
-                            <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White" Text="A009"/>
-                        </StackPanel>
-                        <StackPanel Width="110"  VerticalAlignment="Center" Height="90">
-                            <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="#FFFFCC00" VerticalAlignment="Center" Margin="0,20,0,0">预约</TextBlock>
-                            <TextBlock Foreground="#FFFFCC00" FontSize="20" TextAlignment="Center">11:22</TextBlock>
-                        </StackPanel>
-                    </StackPanel>
-                </StackPanel>
-                <StackPanel Width="190" Height="90" Margin="10">
-                    <StackPanel.Background>
-                        <ImageBrush ImageSource="pic/yellow_button.png"/>
-                    </StackPanel.Background>
-                    <StackPanel Orientation="Horizontal">
-                        <StackPanel Width="80" Height="90" Orientation="Horizontal">
-                            <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White" Text="A009"/>
-                        </StackPanel>
-                        <StackPanel Width="110"  VerticalAlignment="Center" Height="90">
-                            <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="#FFFFCC00" VerticalAlignment="Center" Margin="0,20,0,0">预约</TextBlock>
-                            <TextBlock Foreground="#FFFFCC00" FontSize="20" TextAlignment="Center">11:22</TextBlock>
-                        </StackPanel>
-                    </StackPanel>
-                </StackPanel>
-            </WrapPanel>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
         </StackPanel>
     </Grid>
 </Page>
