--- a/WpfRestaurant/LobbyOrderPage.xaml
+++ b/WpfRestaurant/LobbyOrderPage.xaml
@@ -68,15 +68,7 @@
                                     <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White" Text="{Binding No}" FontSize="16"/>
                                 </StackPanel>
                                 <StackPanel Width="110" Orientation="Horizontal" VerticalAlignment="Center" Height="90">
-                                    <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="Lime" VerticalAlignment="Center">
-                                        <TextBlock.Text>
-                                            <Binding Path="Status">
-                                                <Binding.Converter>
-                                                    <local:StatusConvert></local:StatusConvert>
-                                                </Binding.Converter>
-                                            </Binding>
-                                        </TextBlock.Text>
-                                    </TextBlock>
+                                    <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="Lime" VerticalAlignment="Center" Text="空闲"></TextBlock>
                                 </StackPanel>
                             </StackPanel>
                         </StackPanel>
