--- a/WpfRestaurant/MainWindow.xaml
+++ b/WpfRestaurant/MainWindow.xaml
@@ -5,51 +5,130 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfRestaurant"
         mc:Ignorable="d"
-        Title="MainWindow" Height="429.175" Width="932.827" WindowState="Maximized">
+        Title="MainWindow" Height="550" Width="1000" AllowsTransparency="True" WindowStyle="None" ResizeMode="NoResize">
     <Grid>
         <DockPanel>
-            <DockPanel DockPanel.Dock="Top">
-                <StackPanel DockPanel.Dock="Left"  Height="45" Orientation="Horizontal" Background="#FFF97974">
-                    <TextBlock FontSize="24" VerticalAlignment="Center" TextAlignment="Center" Width="200" Foreground="White">哇哈哈餐厅</TextBlock>
-                </StackPanel>
-                <StackPanel DockPanel.Dock="Right" Orientation="Horizontal" Background="#FFE6E0E2" Width="330">
-                    <TextBlock Margin="0,0,50,0" VerticalAlignment="Center">2017-1-4 09:50:29</TextBlock>
-                    <Image Source="pic/s_head.png" Height="30" Margin="0,0,50,0"></Image>
-                    <TextBlock Margin="0,0,50,0" VerticalAlignment="Center">小王</TextBlock>
-                    <Image Source="pic/ring.png" Height="30"></Image>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Background="LightGray">
-                    <Button Click="Button_Click_2" BorderBrush="{x:Null}">
-                        <Image Source="pic/refresh.png" Height="30" OpacityMask="Black"/>
+            <DockPanel DockPanel.Dock="Top" Height="40">
+                <DockPanel.Background>
+                    <ImageBrush ImageSource="pic/head.gif"/>
+                </DockPanel.Background>
+                <StackPanel DockPanel.Dock="Right" Orientation="Horizontal">
+                    <Image Source="pic/unlogin.gif" Height="30" Margin="50,0"></Image>
+                    <Button Height="30" Margin="50,0" Background="{x:Null}" BorderBrush="{x:Null}" Click="CloseClick">
+                        <Image Source="pic/close.gif" ></Image>
                     </Button>
                 </StackPanel>
-            </DockPanel>
-            <DockPanel DockPanel.Dock="Left" Width="200" Background="#FF4C5D65">
-                <StackPanel DockPanel.Dock="Bottom" Height="80" HorizontalAlignment="Center">
-                    <StackPanel Orientation="Horizontal" Height="40">
-                        <TextBlock Margin="5,0" VerticalAlignment="Center" Foreground="White">占用中</TextBlock>
-                        <TextBlock x:Name="BusyTextBlock" Margin="5,0" VerticalAlignment="Center" Foreground="White" Text="0"/>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal" Height="40">
-                        <TextBlock Margin="5,0" VerticalAlignment="Center" Foreground="White">空闲中</TextBlock>
-                        <TextBlock x:Name="FreeTextBlock" Margin="5,0" VerticalAlignment="Center" Foreground="White" Text="20"/>
-                    </StackPanel>
-                </StackPanel>
-                <StackPanel>
-                    <Button FontSize="20" Foreground="White" Height="50" Background="#FF4C5D65" Click="Button_Click_3">大厅</Button>
-                    <Button FontSize="20" Foreground="White" Height="50" Background="#FF4C5D65" Click="Button_Click_3">小包间</Button>
-                    <Button FontSize="20" Foreground="White" Height="50" Background="#FF4C5D65" Click="Button_Click_3">大包间</Button>
-                    <Button FontSize="20" Foreground="White" Height="50" Background="#FF4C5D65" Click="Button_Click_3">全部桌台</Button>
+                <StackPanel Orientation="Horizontal">
                 </StackPanel>
             </DockPanel>
-            <Frame x:Name="SidebarFrame" DockPanel.Dock="Right" Width="330" Background="#FFD7D7D7" NavigationUIVisibility="Hidden"></Frame>
+            <DockPanel DockPanel.Dock="Left" Width="200" Background="White">
+                <DockPanel DockPanel.Dock="Top" Height="45">
+                    <DockPanel.Background>
+                        <ImageBrush ImageSource="pic/title.gif"/>
+                    </DockPanel.Background>
+                    <TextBlock FontSize="24px" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center">露营餐厅</TextBlock>
+                </DockPanel>
+                <StackPanel DockPanel.Dock="Bottom">
+                    <StackPanel.Background>
+                        <ImageBrush ImageSource="pic/time.gif"/>
+                    </StackPanel.Background>
+                    <TextBlock FontSize="24" Foreground="White" Margin="10,5">23:35:08</TextBlock>
+                    <TextBlock FontSize="24" Foreground="White" Margin="10,5">2017-3-9</TextBlock>
+                </StackPanel>
+                <DockPanel>
+                    <StackPanel DockPanel.Dock="Bottom" Height="80" HorizontalAlignment="Left" Width="120">
+                        <StackPanel Orientation="Horizontal" Height="40">
+                            <StackPanel.Background>
+                                <ImageBrush ImageSource="pic/table_num.gif"/>
+                            </StackPanel.Background>
+                            <TextBlock Margin="0" VerticalAlignment="Center" Foreground="White" Width="60" TextAlignment="Center">占用中</TextBlock>
+                            <TextBlock x:Name="BusyTextBlock" Margin="0" VerticalAlignment="Center" Foreground="White" Text="0" Width="60" TextAlignment="Center"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Height="40">
+                            <StackPanel.Background>
+                                <ImageBrush ImageSource="pic/table_num.gif"/>
+                            </StackPanel.Background>
+                            <TextBlock Margin="0" VerticalAlignment="Center" Foreground="White" Width="60" TextAlignment="Center">空闲中</TextBlock>
+                            <TextBlock x:Name="FreeTextBlock" Margin="0" VerticalAlignment="Center" Foreground="White" Text="20" Width="60" TextAlignment="Center"/>
+                        </StackPanel>
+                    </StackPanel>
+                    <StackPanel HorizontalAlignment="Left">
+                        <Button Click="Button_Click_3" Background="{x:Null}" BorderBrush="{x:Null}" Tag="大厅">
+                            <StackPanel Width="150" Height="55" Orientation="Horizontal" >
+                                <StackPanel.Background>
+                                    <ImageBrush ImageSource="pic/dating.gif"/>
+                                </StackPanel.Background>
+                                <TextBlock Text="大厅" Foreground="White" FontSize="20" TextAlignment="Center" Width="150" VerticalAlignment="Center"/>
+                            </StackPanel>
+                        </Button>
+                        <Button Click="Button_Click_3" Background="{x:Null}" BorderBrush="{x:Null}" Tag="小包间">
+                            <StackPanel Width="150" Height="55" Orientation="Horizontal" >
+                                <StackPanel.Background>
+                                    <ImageBrush ImageSource="pic/baojian.gif"/>
+                                </StackPanel.Background>
+                                <TextBlock Text="小包间" Foreground="White" FontSize="20" TextAlignment="Center" Width="150" VerticalAlignment="Center"/>
+                            </StackPanel>
+                        </Button>
+                        <Button Click="Button_Click_3" Background="{x:Null}" BorderBrush="{x:Null}" Tag="大包间">
+                            <StackPanel Width="150" Height="55" Orientation="Horizontal" >
+                                <StackPanel.Background>
+                                    <ImageBrush ImageSource="pic/baojian.gif"/>
+                                </StackPanel.Background>
+                                <TextBlock Text="大包间" Foreground="White" FontSize="20" TextAlignment="Center" Width="150" VerticalAlignment="Center"/>
+                            </StackPanel>
+                        </Button>
+                        <Button Click="Button_Click_3" Background="{x:Null}" BorderBrush="{x:Null}" Tag="全部桌台">
+                            <StackPanel Width="150" Height="55" Orientation="Horizontal" >
+                                <StackPanel.Background>
+                                    <ImageBrush ImageSource="pic/quanbu.gif"/>
+                                </StackPanel.Background>
+                                <TextBlock Text="全部桌台" Foreground="White" FontSize="20" TextAlignment="Center" Width="150" VerticalAlignment="Center"/>
+                            </StackPanel>
+                        </Button>
+                    </StackPanel>
+                </DockPanel>
+            </DockPanel>
             <DockPanel>
-                <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Background="#FFE0DADA">
-                    <Button Width="120" Height="60" Click="Button_Click">堂点</Button>
-                    <Button Width="120" Click="Button_Click_1">预订</Button>
-                    <Button Width="120">外卖</Button>
-                </StackPanel>
-                <Frame x:Name="PageFrame" NavigationUIVisibility="Hidden" Background="#FFE0DADA"></Frame>
+                <DockPanel.Background>
+                    <ImageBrush ImageSource="pic/main_bgc.gif"/>
+                </DockPanel.Background>
+                <DockPanel Dock="Left">
+                    <StackPanel DockPanel.Dock="Top">
+                        <Button Width="50" Height="50" Background="{x:Null}" BorderBrush="{x:Null}" Margin="50,40,0,0">
+                            <Image Source="pic/refresh.gif"></Image>
+                        </Button>
+                    </StackPanel>
+                    <StackPanel>
+                        <Button Width="40" Height="80" Background="{x:Null}" BorderBrush="{x:Null}" Margin="0,50,0,10" Click="Button_Click">
+                            <StackPanel Width="40" Height="80" Orientation="Horizontal">
+                                <StackPanel.Background>
+                                    <ImageBrush ImageSource="pic/tangdian.gif"/>
+                                </StackPanel.Background>
+                                <TextBlock Foreground="White" FontSize="20" TextAlignment="Center" Width="40" VerticalAlignment="Center">堂<LineBreak/>点</TextBlock>
+                            </StackPanel>
+                        </Button>
+                        <Button Width="40" Height="80" Background="{x:Null}" BorderBrush="{x:Null}" Margin="0,10" Click="Button_Click_1">
+                            <StackPanel Width="40" Height="80" Orientation="Horizontal">
+                                <StackPanel.Background>
+                                    <ImageBrush ImageSource="pic/tangdian.gif"/>
+                                </StackPanel.Background>
+                                <TextBlock Foreground="White" FontSize="20" TextAlignment="Center" Width="40" VerticalAlignment="Center">预<LineBreak/>订</TextBlock>
+                            </StackPanel>
+                        </Button>
+                        <Button Width="40" Height="80" Background="{x:Null}" BorderBrush="{x:Null}" Margin="0,10">
+                            <StackPanel Width="40" Height="80" Orientation="Horizontal">
+                                <StackPanel.Background>
+                                    <ImageBrush ImageSource="pic/tangdian.gif"/>
+                                </StackPanel.Background>
+                                <TextBlock Foreground="White" FontSize="20" TextAlignment="Center" Width="40" VerticalAlignment="Center">外<LineBreak/>卖</TextBlock>
+                            </StackPanel>
+                        </Button>
+                    </StackPanel>
+                </DockPanel>
+                <Frame x:Name="SidebarFrame" DockPanel.Dock="Right" Width="330" NavigationUIVisibility="Hidden"></Frame>
+                <DockPanel>
+                    <Frame x:Name="PageFrame" NavigationUIVisibility="Hidden" Margin="0,40"></Frame>
+                </DockPanel>
             </DockPanel>
         </DockPanel>
     </Grid>
