--- a/WpfRestaurant/OrderPage.xaml
+++ b/WpfRestaurant/OrderPage.xaml
@@ -7,15 +7,20 @@
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="335.088"
       Title="OrderPage">
+    <Page.Background>
+        <ImageBrush ImageSource="pic/diancai.png"/>
+    </Page.Background>
 
     <Grid>
         <DockPanel>
             <StackPanel DockPanel.Dock="Bottom">
-                <Button Width="280" Height="40" Margin="0,10" Background="#FF169BD5" Click="Button_Click_1">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock FontSize="20" Foreground="White">总计：￥</TextBlock>
-                        <TextBlock x:Name="CostTextBlock" FontSize="20" Foreground="White">40</TextBlock>
-                    </StackPanel>
+                <Button Width="280" Height="40" Click="Button_Click_1" Background="{x:Null}" BorderBrush="{x:Null}">
+                    <DockPanel Width="280" Height="40">
+                        <DockPanel.Background>
+                            <ImageBrush ImageSource="pic/red_button.png"/>
+                        </DockPanel.Background>
+                        <TextBlock x:Name="CostTextBlock" FontSize="20" Foreground="White" TextAlignment="Center" VerticalAlignment="Center">总计：￥40</TextBlock>
+                    </DockPanel>
                 </Button>
             </StackPanel>
             <StackPanel>
@@ -24,11 +29,25 @@
                     <TextBlock x:Name="tableNoTextblock" FontSize="18" Margin="25,0">A002</TextBlock>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <Button Width="100" Height="30" Margin="5" Click="Button_Click">加/退菜</Button>
-                    <Button Width="100" Margin="5">小票补打</Button>
+                    <Button Width="100" Height="30" Margin="5" Click="Button_Click" Background="{x:Null}" BorderBrush="{x:Null}">
+                        <DockPanel Width="100" Height="30">
+                            <DockPanel.Background>
+                                <ImageBrush ImageSource="pic/red_button.png"/>
+                            </DockPanel.Background>
+                            <TextBlock Text="加/退菜" FontSize="20" Foreground="White" TextAlignment="Center"></TextBlock>
+                        </DockPanel>
+                    </Button>
+                    <Button Width="100" Margin="5" Background="{x:Null}" BorderBrush="{x:Null}">
+                        <DockPanel Width="100" Height="30">
+                            <DockPanel.Background>
+                                <ImageBrush ImageSource="pic/red_button.png"/>
+                            </DockPanel.Background>
+                            <TextBlock Text="小票补打" FontSize="20" Foreground="White" TextAlignment="Center"></TextBlock>
+                        </DockPanel>
+                    </Button>
                 </StackPanel>
                 <StackPanel>
-                    <DataGrid x:Name="BillDataGrid" AutoGenerateColumns="False" IsReadOnly="True">
+                    <DataGrid x:Name="BillDataGrid" AutoGenerateColumns="False" IsReadOnly="True" Background="{x:Null}" BorderBrush="{x:Null}">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="序号" Width="*" Binding="{Binding Path=Food.Id}"></DataGridTextColumn>
                             <DataGridTextColumn Header="菜品" Width="*" Binding="{Binding Path=Food.Name}"></DataGridTextColumn>
